<resources>
    <string name="app_name">Studentify</string>
    <string name="title_activity_home">Studentify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="clear_term">Clear Term</string>
    <string name="student_details">Student Details</string>
    <string name="name">Name</string>
    <string name="college_name">College Name</string>
    <string name="student_id">Student ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="term">Term</string>
    <string name="class_information">Class Information</string>
    <string name="splashTitle">Studentify</string>
    <string name="professor_name">Professor Name</string>
    <string name="room_number">Room Number</string>
    <string name="mon">Mon</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="task_details">Task Details</string>
    <string name="task_name">Task Name</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="done">Done</string>
    <string name="homework">Homework</string>
    <string name="classes">Classes</string>
    <string name="schedule">Schedule</string>
    <string name="user_information">User Information</string>
    <string name="university_name">University Name</string>
    <string name="professor">Professor</string>
    <string name="class_title">Class Title</string>
    <string name="date_time">Date Time</string>
    <string name="user_info">User Info</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>\
</resources>
