<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ClassInformationActivity">

    <TextView
        android:id="@+id/classInformationHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="12dp"
        android:paddingTop="24dp"
        android:paddingEnd="12dp"
        android:paddingBottom="4dp"
        android:text="@string/class_information"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bottom_curve_background"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classInformationHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/classNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/name"
                android:textColorHint="@color/primaryTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/className"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:typeface="serif" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/professorNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/professor_name"
                android:textColorHint="@color/primaryTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/professorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:typeface="serif" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/roomNumberContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/room_number"
                android:textColorHint="@color/primaryTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/RoomNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:typeface="serif" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mondayButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_square_button_white"
                    android:text="@string/mon" />

                <Button
                    android:id="@+id/tuesdayButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_square_button_white"
                    android:text="@string/tue" />

                <Button
                    android:id="@+id/wednesdayButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_square_button_white"
                    android:text="@string/wed" />

                <Button
                    android:id="@+id/thursdayButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_square_button_white"
                    android:text="@string/thu" />

                <Button
                    android:id="@+id/fridayButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_square_button_white"
                    android:text="@string/fri" />

                <Button
                    android:id="@+id/saturdayButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/curved_square_button_white"
                    android:text="@string/sat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/transparent_curved_button"
                    android:text="@string/start_time"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:typeface="serif" />

                <Button
                    android:id="@+id/endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/transparent_curved_button"
                    android:text="@string/end_time"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:typeface="serif"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/curved_button_blue"
        android:elevation="8dp"
        android:shadowColor="@android:color/darker_gray"
        android:text="@string/cancel"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/curved_button_blue"
        android:elevation="8dp"
        android:shadowColor="@android:color/darker_gray"
        android:text="@string/add"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton" />


</androidx.constraintlayout.widget.ConstraintLayout>